--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Welcome to the CTF Website</h1>
-    <p>Upload a file (e.g., a JavaScript file) to see it executed:</p>
+    <p>Upload a file:</p>
     <form action="/upload" method="POST" enctype="multipart/form-data">
         <input type="file" name="file" required>
         <button type="submit">Upload</button>
