--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Admin Login</h1>
-    <form action="/admin/login" method="POST">
+    <form action="/login" method="POST">
         <label for="username">Username:</label>
         <input type="text" id="username" name="username" required>
         <br>
